--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ select::-ms-expand {
     transition: color 0.3s;
     display: inline-block;
   }
-  .archive-list__content:hover:not(.no-hover) {
+  .archive-list__content:hover {
     color: #F2157F;
   }
 }
@@ -834,7 +834,7 @@ select::-ms-expand {
   z-index: 9996;
   padding: 79px 25px 79px 20px;
   padding: 4.9375rem 1.5625rem 4.9375rem 1.25rem;
-  overflow: hidden;
+  overflow: scroll;
   clip-path: circle(5px at 110% -10%);
   -webkit-clip-path: circle(5px at 110% -10%);
   -webkit-transition: all 0.5s ease-out;
@@ -1649,6 +1649,7 @@ select::-ms-expand {
 }
 
 .history-body {
+  background-color: #F2157F;
   position: relative;
   z-index: -100;
 }
@@ -1901,41 +1902,40 @@ select::-ms-expand {
     transform: translateX(-7rem);
   }
 }
-.history-scroll__start-btn {
-  z-index: 9002;
-  position: fixed;
-  left: calc(50% - 1.375rem);
-  bottom: 40vh;
-  bottom: calc(34.375vh + 1.375rem);
-  content: ">";
-  line-height: 44px;
-  line-height: 2.75rem;
-  text-align: center;
-  display: inline-block;
-  background-color: #F2157F;
-  width: 44px;
-  width: 2.75rem;
-  height: 44px;
-  height: 2.75rem;
-  border-radius: 50%;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  cursor: pointer;
-  -webkit-animation-name: tobig;
-          animation-name: tobig;
-  -webkit-animation-fill-mode: backwards;
-          animation-fill-mode: backwards;
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-timing-function: ease-in;
-          animation-timing-function: ease-in;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-direction: normal;
-          animation-direction: normal;
-  border: 2px solid #fff;
-}
 @media screen and (min-width: 768px) {
+  .history-scroll__start-btn {
+    z-index: 9002;
+    position: fixed;
+    left: calc(50% - 1.375rem);
+    bottom: calc(34.375vh + 1.375rem);
+    content: ">";
+    line-height: 2.75rem;
+    text-align: center;
+    display: inline-block;
+    background-color: #F2157F;
+    width: 2.75rem;
+    height: 2.75rem;
+    border-radius: 50%;
+    border: 1rem solid #fff;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    cursor: pointer;
+    -webkit-animation-name: tobig;
+            animation-name: tobig;
+    -webkit-animation-fill-mode: backwards;
+            animation-fill-mode: backwards;
+    -webkit-animation-duration: 0.5s;
+            animation-duration: 0.5s;
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
+    -webkit-animation-direction: normal;
+            animation-direction: normal;
+    border: 2px solid #fff;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 768px) {
   .history-scroll__start-btn {
     border: 1rem solid #fff;
   }
@@ -2294,6 +2294,23 @@ select::-ms-expand {
   }
 }
 
+.history-section.long::after {
+  position: absolute;
+  content: "";
+  bottom: 34.375vh;
+  left: 50%;
+  -webkit-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+  display: inline-block;
+  width: 18px;
+  width: 1.125rem;
+  height: 18px;
+  height: 1.125rem;
+  border-radius: 50%;
+  background-color: #F2157F;
+  border: 2px solid #fff;
+}
+
 .history-section__top {
   color: #fff;
   padding-top: 10vh;
@@ -2305,7 +2322,8 @@ select::-ms-expand {
   bottom: 0;
   width: 100%;
   height: 34.375vh;
-  z-index: 0;
+  background-color: #fff;
+  z-index: -1;
 }
 
 .history-section__title {
@@ -3285,7 +3303,7 @@ select::-ms-expand {
     transition: color 0.3s;
     display: inline-block;
   }
-  .info-list__content:hover:not(.no-hover) {
+  .info-list__content:hover {
     color: #F2157F;
   }
 }
@@ -4433,6 +4451,7 @@ select::-ms-expand {
 
 .modal-window__head {
   display: inline-block;
+  width: 100%;
   max-width: 236px;
   max-width: 14.75rem;
   color: #fff;
@@ -4861,6 +4880,17 @@ select::-ms-expand {
     opacity: 1;
   }
 }
+.top-scroll__text {
+  display: block;
+  margin-top: 10px;
+  margin-top: 0.625rem;
+  padding-top: 16px;
+  padding-top: 1rem;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-family: "Montserrat", sans-serif;
+}
+
 .top-section-title {
   font-size: 40px;
   font-size: 2.5rem;
@@ -5175,7 +5205,7 @@ p.update {
     z-index: 2;
     display: block !important;
     width: 3.125rem;
-    height: 1.6875rem;
+    height: 3.125rem;
     position: absolute;
     bottom: -3.75rem;
     -webkit-filter: none !important;
