--- a/src/sass/module/_archive-list.scss
+++ b/src/sass/module/_archive-list.scss
@@ -40,7 +40,7 @@
   @include mq("md") {
     transition: color 0.3s;
     display: inline-block;
-    &:hover:not(.no-hover) {
+    &:hover {
       color: $pink;
     }
   }
