--- a/src/sass/module/_history-section.scss
+++ b/src/sass/module/_history-section.scss
@@ -22,6 +22,20 @@
   }
 }
 
+.history-section.long::after {
+  position: absolute;
+  content: "";
+  bottom: 34.375vh;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  display: inline-block;
+  width: rem(18);
+  height: rem(18);
+  border-radius: 50%;
+  background-color: $pink;
+  border: 2px solid $white;
+}
+
 .history-section__top {
   color: $white;
   // padding-top: rem(125);
@@ -34,7 +48,8 @@
   bottom: 0;
   width: 100%;
   height: 34.375vh;
-  z-index: 0;
+  background-color: #fff;
+  z-index: -1;
 }
 
 .history-section__title {
