--- a/src/sass/module/_modal-window.scss
+++ b/src/sass/module/_modal-window.scss
@@ -8,6 +8,7 @@
 
 .modal-window__head {
   display: inline-block;
+  width: 100%;
   max-width: rem(236);
   color: #fff;
   background-color: $pink;
