--- a/src/sass/module/_move-header.scss
+++ b/src/sass/module/_move-header.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
 .move-header {
-background-color: $white;
-transition: .3s all;
-opacity: 0;
-position: fixed;
+  background-color: $white;
+  transition: 0.3s all;
+  opacity: 0;
+  position: fixed;
 }
 
 .move-header__inner {
@@ -13,8 +13,7 @@ position: fixed;
   justify-content: space-between;
   @include mq("md") {
     height: rem(80);
-  padding: rem(0) rem(40) rem(20);
-
+    padding: rem(0) rem(40) rem(20);
   }
 }
 
