--- a/src/sass/module/_top-scroll.scss
+++ b/src/sass/module/_top-scroll.scss
@@ -15,47 +15,6 @@
   cursor: pointer;
 }
 
-// .top-scroll::after {
-//   content: "";
-//   background-image: url(../images/common/top-arrow.png);
-//   background-size: cover;
-//   background-position: bottom;
-//   width: 20px;
-//   height: 20px;
-//   position: absolute;
-//   top: 1px;
-//   left: 50%;
-//   transform: translateX(-50%);
-// }
-
-// @include mq("md") {
-//   .top-scroll:hover::after {
-//     animation: topicon-pos 0.1s linear 0s normal;
-//   }
-// }
-
-// @keyframes topicon-pos {
-//   0% {
-//     top: 0px;
-//   }
-//   25% {
-//     top: -10px;
-//   }
-//   50% {
-//     top: -13px;
-//   }
-//   100% {
-//     top: 0px;
-//   }
-// }
-
-// .top-scroll img {
-//   display: inline-block;
-//   width: rem(22);
-//   height: rem(20);
-//   margin: 0 auto;
-// }
-
 .top-scroll__text {
   display: block;
   margin-top: rem(10);
@@ -133,4 +92,19 @@
     top: 0;
     opacity: 1;
   }
+}
+
+// .top-scroll img {
+//   display: inline-block;
+//   width: rem(22);
+//   height: rem(20);
+//   margin: 0 auto;
+// }
+
+.top-scroll__text {
+  display: block;
+  margin-top: rem(10);
+  padding-top: rem(16);
+  font-size: rem(14);
+  font-family: $sub-font;
 }
