--- a/css/styles.css
+++ b/css/styles.css
@@ -2007,6 +2007,7 @@ select::-ms-expand {
 
 .section {
   height: 100vh;
+  /* Avoid Chrome to see Safari hack */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2021,6 +2022,12 @@ select::-ms-expand {
   position: relative;
   padding: 0 50vw;
   overflow: hidden;
+}
+@supports (-webkit-touch-callout: none) {
+  .section body {
+    /* The hack for Safari */
+    height: -webkit-fill-available;
+  }
 }
 
 .header {
@@ -3767,6 +3774,7 @@ select::-ms-expand {
   overflow: hidden;
   position: fixed;
   top: 7%;
+  z-index: -10;
 }
 
 @media screen and (min-width: 768px) {
