--- a/src/sass/module/_h-scroll.scss
+++ b/src/sass/module/_h-scroll.scss
@@ -7,6 +7,7 @@
 .h-scroll {
   background-color: $pink;
   position: fixed;
+  height: 100%;
   z-index: 100;
   overflow: auto;
   display: flex;
@@ -301,14 +302,7 @@
 }
 
 .section {
-  height: 100vh;
-  /* Avoid Chrome to see Safari hack */
-  @supports (-webkit-touch-callout: none) {
-    body {
-      /* The hack for Safari */
-      height: -webkit-fill-available;
-    }
-  }
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
