--- a/css/styles.css
+++ b/css/styles.css
@@ -1680,6 +1680,7 @@ select::-ms-expand {
 
 .h-scroll__container {
   position: relative;
+  height: 100%;
 }
 @media screen and (min-width: 768px) {
   .h-scroll__container {
