--- a/src/sass/module/_h-scroll.scss
+++ b/src/sass/module/_h-scroll.scss
@@ -45,6 +45,7 @@
 
 .h-scroll__container {
   position: relative;
+  height: 100%;
   @include mq("md") {
     max-height: 16000px !important;
     height: 16000px !important;
